[package]
name = "nx-cache-server"
version = "0.1.0"
edition = "2021"

# Main binary
[[bin]]
name = "nx-cache-server"
path = "src/bin/server.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-stream = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
thiserror = "1.0"
subtle = "2.5"
aws-config = { version = "1.0", default-features = false }
aws-sdk-s3 = { version = "1.0", default-features = false, features = ["rt-tokio", "default-https-client"] }
aws-credential-types = "1.2"
bytes = "1.11"
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }

[profile.release]
strip = true         # Remove all symbols
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Don't include unwinding code
