[package]
name = "nx-cache-server"
version = "0.1.0"
edition = "2021"

# Main binary
[[bin]]
name = "nx-cache-server"
path = "src/bin/server.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-stream = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
thiserror = "2.0"
subtle = "2.6"
minio = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }

[dev-dependencies]
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.14", features = ["minio"] }
tower = "0.5"

[profile.release]
strip = true         # Remove all symbols
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Don't include unwinding code
